--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <title>掲示板</title>
     <style>
-        /* 既存のスタイル */
         body { font-family: Arial, sans-serif; margin: 20px; }
         #posts { list-style-type: none; padding: 0; }
         .post { 
@@ -16,20 +15,9 @@
             position: relative; 
         }
         .post-title { font-weight: bold; font-size: 1.5em; }
-        .post-content { 
-            margin-top: 5px; 
-            white-space: pre-wrap; 
-            word-wrap: break-word; 
-        }
-        .post-date, .post-number { 
-            font-size: 0.9em; 
-            color: #888; 
-        }
-        .post-number { 
-            position: absolute; 
-            bottom: 0; 
-            right: 0; 
-        }
+        .post-content { margin-top: 5px; white-space: pre-wrap; word-wrap: break-word; }
+        .post-date, .post-number { font-size: 0.9em; color: #888; }
+        .post-number { position: absolute; bottom: 0; right: 0; }
         .report-button { 
             position: absolute; 
             top: 0; 
@@ -42,9 +30,7 @@
             border-radius: 5px; 
             cursor: pointer; 
         }
-        .report-button:hover { 
-            background-color: #ccc; 
-        }
+        .report-button:hover { background-color: #ccc; }
         input[type="text"], textarea {
             width: 100%;
             padding: 15px;
@@ -93,11 +79,8 @@
             const response = await fetch('https://script.google.com/macros/s/AKfycbxdCarkggYZJvshEx07ItNVIV2B3zQ4N910AIjWsUyQ_IGCmo51Gceq_uqimJS1C365eA/exec');
             let posts = await response.json();
 
-            // スプレッドシートの項目行を除外
-            posts = posts.slice(1);
-
+            posts = posts.slice(1); // スプレッドシートの項目行を除外
             const postsDiv = document.getElementById("posts");
-
             postsDiv.innerHTML = ''; // 現在の投稿をクリア
 
             if (posts.length === 0) {
@@ -108,15 +91,11 @@
                         const postElement = document.createElement("div");
                         postElement.classList.add("post");
 
-                        const postNumber = `#${posts.length - index}`; // 投稿番号
+                        const postNumber = `#${posts.length - index}`;
                         const username = post[1];
-                        const content = post[2].replace(/</g, "&lt;").replace(/>/g, "&gt;"); // HTMLエスケープ
+                        const content = post[2].replace(/</g, "&lt;").replace(/>/g, "&gt;");
                         const date = new Date(post[0]);
-
-                        // 日付をフォーマット
                         const formattedDate = isNaN(date) ? "" : date.toLocaleString();
-
-                        // 報告ボタンの機能を追加
                         const reportUrl = `https://docs.google.com/forms/d/e/1FAIpQLSe_gcI4CYjBM-ZGsIR5Q_nd0aquUixz7LixaqzfeuUjEowliQ/viewform?usp=pp_url&entry.1458296354=${encodeURIComponent(postNumber)}`;
 
                         postElement.innerHTML = `
@@ -133,34 +112,36 @@
             }
         }
 
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchPosts(); // 初回の投稿取得
+            setInterval(fetchPosts, 5000); // 5秒ごとに更新
+        });
+
         document.getElementById('postForm').addEventListener('submit', async function(event) {
             event.preventDefault();
             const button = event.target.querySelector('button');
-            button.disabled = true; // ボタンを無効化
+            button.disabled = true;
 
-            // reCAPTCHAトークンを取得
             const recaptchaResponse = grecaptcha.getResponse();
-
             if (!recaptchaResponse) {
                 alert("reCAPTCHA認証が完了していません。");
-                button.disabled = false; // ボタンを再有効化
+                button.disabled = false;
                 return;
             }
 
             const formData = new FormData(event.target);
-            formData.append('g-recaptcha-response', recaptchaResponse); // reCAPTCHAトークンを追加
+            formData.append('g-recaptcha-response', recaptchaResponse);
 
             await fetch(event.target.action, {
                 method: 'POST',
                 body: formData
             });
-            button.disabled = false; // ボタンを再び有効化
-            event.target.reset(); // フォームをリセット
-            grecaptcha.reset(); // reCAPTCHAをリセット
+
+            button.disabled = false;
+            event.target.reset();
+            grecaptcha.reset();
             fetchPosts(); // 投稿内容を再読み込み
         });
-
-        document.addEventListener('DOMContentLoaded', fetchPosts);
     </script>
 </body>
 </html>
