--- a/index.html
+++ b/index.html
@@ -2,69 +2,63 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- タイトル -->
-  <title>掲示板</title>
-
-  <!-- PWA用の設定 -->
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#26a79a">
-  <meta name="apple-mobile-web-app-title" content="掲示板">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon.png">
-
-  <!-- スタイル -->
+  <title>掲示板</title>
   <style>
-    /* トップ通知用 */
-    #topToast {
-      position: fixed;
-      z-index: 9999;
-      display: flex;
-      top: -140px;
-      left: 50%;
-      transform: translate(-50%, 0);
-      width: 100%;
-      max-width: 600px;
-      padding: 20px 25px;
+    /* ページ全体のフォント・余白設定 & 背景設定 */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      transition: background-image 0.5s ease-in-out;
+    }
+    #posts {
+      list-style-type: none;
+      padding: 0;
+    }
+    .post {
+      margin-bottom: 20px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 10px;
+      position: relative;
+    }
+    .post-title {
+      font-weight: bold;
+      font-size: 1.5em;
+    }
+    .post-content {
+      margin-top: 5px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+    .post-date, .post-number {
+      font-size: 0.9em;
+      color: #888;
+    }
+    .post-number {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+    .report-button {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: #ddd;
+      color: #555;
+      border: none;
+      font-size: 0.8em;
+      padding: 5px 10px;
       border-radius: 5px;
-      background: linear-gradient(90deg, rgba(189,185,255,1) 0%, rgba(103,184,255,1) 100%);
-      align-items: center;
-      justify-content: flex-start;
-      gap: 20px;
-      filter: drop-shadow(0px 2px 8px #ddd);
-      transition: 0.8s ease-in-out;
+      cursor: pointer;
     }
-    #topToast.show { top: 40px; }
-    .topToastMessege p { color: #000; font-size: 0.9rem; line-height: 1.7; margin: 0; font-weight: 600; }
-
-    /* 掲示板全体 */
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    #posts { list-style-type: none; padding: 0; }
-    .post { 
-      margin-bottom: 20px; 
-      border-bottom: 1px solid #ddd; 
-      padding-bottom: 10px; 
-      position: relative; 
+    .report-button:hover {
+      background-color: #ccc;
     }
-    .post-title { font-weight: bold; font-size: 1.5em; }
-    .post-content { margin-top: 5px; white-space: pre-wrap; word-wrap: break-word; }
-    .post-date, .post-number { font-size: 0.9em; color: #888; }
-    .post-number { position: absolute; bottom: 0; right: 0; }
-    .report-button { 
-      position: absolute; 
-      top: 0; 
-      right: 0; 
-      background-color: #ddd; 
-      color: #555; 
-      border: none; 
-      font-size: 0.8em; 
-      padding: 5px 10px; 
-      border-radius: 5px; 
-      cursor: pointer; 
-    }
-    .report-button:hover { background-color: #ccc; }
     input[type="text"], textarea {
       width: 100%;
       padding: 15px;
@@ -90,25 +84,95 @@
     button:hover {
       background-color: #1f877b;
     }
+
+    /* 設定ボタン（カスタム歯車アイコン Setup.png）のスタイル */
+    .settings-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: rgba(0,0,0,0.6);
+      border: none;
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      z-index: 1000;
+    }
+
+    /* モーダルウィンドウのスタイル */
+    .modal {
+      display: none; 
+      position: fixed; 
+      z-index: 1001;
+      left: 0;
+      top: 0;
+      width: 100%; 
+      height: 100%; 
+      overflow: auto; 
+      background-color: rgba(0,0,0,0.5);
+    }
+    .modal-content {
+      background-color: white;
+      margin: 10% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      max-width: 600px;
+      border-radius: 10px;
+    }
+    .close-modal {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .close-modal:hover,
+    .close-modal:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    /* 背景候補画像および「なし」オプションのスタイル */
+    .bg-option {
+      width: 30%;
+      margin: 1%;
+      cursor: pointer;
+      border: 2px solid transparent;
+      border-radius: 5px;
+    }
+    .bg-option:hover {
+      border-color: #26a79a;
+    }
+    /* 「なし」オプション用のスタイル */
+    .none-option {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+      font-size: 16px;
+      color: #333;
+      height: 100px;
+    }
   </style>
-  
-  <!-- reCAPTCHA スクリプト -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
-  <!-- トップ通知 -->
-  <div id="topToast">
-    <div class="topToastMessege">
-      <p>
-        この掲示板に、返信機能を実装したいと考えております。ご協力いただける方は、
-        <a href="https://github.com/YU-TechnicalDepartment/Bulletin-Board" target="_blank">
-          GitHubリポジトリ
-        </a> をフォークし、編集してください。
-      </p>
+  <h1>掲示板</h1>
+
+  <!-- 設定ボタン（カスタム歯車アイコン：直下のSetup.pngを使用） -->
+  <button class="settings-button" id="open-settings">
+    <img src="Setup.png" alt="設定" style="width:100%; height:100%; border-radius:50%;">
+  </button>
+
+  <!-- 背景変更用のモーダル -->
+  <div id="background-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-modal" id="close-modal">&times;</span>
+      <h2>背景を選択</h2>
+      <div id="bg-options" style="display: flex; flex-wrap: wrap; justify-content: space-around; align-items: center;"></div>
     </div>
   </div>
 
-  <h1>掲示板</h1>
   <form id="postForm" action="https://script.google.com/macros/s/AKfycbxdCarkggYZJvshEx07ItNVIV2B3zQ4N910AIjWsUyQ_IGCmo51Gceq_uqimJS1C365eA/exec" method="POST">
     <label for="username">ユーザー名:</label>
     <input type="text" id="username" name="username" placeholder="ユーザー名" required>
@@ -124,20 +188,13 @@
   <ul id="posts"></ul>
 
   <script>
-    // ページロード後にトップ通知を表示する
-    window.addEventListener('load', () => {
-      const toast = document.getElementById("topToast");
-      toast.classList.add("show");
-      setTimeout(() => { toast.classList.remove("show"); }, 4500);
-    });
-
+    // --- 投稿を取得する既存の処理 ---
     async function fetchPosts() {
       const response = await fetch('https://script.google.com/macros/s/AKfycbxdCarkggYZJvshEx07ItNVIV2B3zQ4N910AIjWsUyQ_IGCmo51Gceq_uqimJS1C365eA/exec');
       let posts = await response.json();
-
       posts = posts.slice(1); // スプレッドシートの項目行を除外
       const postsDiv = document.getElementById("posts");
-      postsDiv.innerHTML = '';
+      postsDiv.innerHTML = ''; // 現在の投稿をクリア
 
       if (posts.length === 0) {
         postsDiv.innerHTML = `<p>まだ投稿がありません。</p>`;
@@ -197,6 +254,77 @@
       event.target.reset();
       grecaptcha.reset();
       fetchPosts(); // 投稿内容を再読み込み
+    });
+
+    // --- 背景変更機能の実装 ---
+    const settingsButton = document.getElementById('open-settings');
+    const modal = document.getElementById('background-modal');
+    const closeModal = document.getElementById('close-modal');
+    const bgOptionsDiv = document.getElementById('bg-options');
+
+    // 背景候補の配列
+    // label：表示用テキスト／画像のalt、file：ファイル名。fileが"none"の場合は背景を解除します。
+    const backgroundCandidates = [
+      { label: "なし", file: "none" },
+      { label: "背景1", file: "bg1.jpg" },
+      { label: "背景2", file: "bg2.jpg" },
+      { label: "背景3", file: "bg3.jpg" }
+    ];
+
+    settingsButton.addEventListener('click', () => {
+      modal.style.display = 'block';
+      // 以前の背景候補をクリア
+      bgOptionsDiv.innerHTML = '';
+
+      // 候補を並べる
+      backgroundCandidates.forEach(candidate => {
+        let element;
+        if(candidate.file === "none"){
+          // 「なし」オプションの場合はテキスト表示用のdiv要素を生成
+          element = document.createElement('div');
+          element.textContent = candidate.label;
+          element.className = 'bg-option none-option';
+        } else {
+          element = document.createElement('img');
+          element.src = 'background/' + candidate.file;
+          element.alt = candidate.label;
+          element.className = 'bg-option';
+        }
+        // 候補クリックで背景変更＆モーダル閉じる
+        element.addEventListener('click', () => {
+          if(candidate.file === "none"){
+            document.body.style.backgroundImage = "none";
+          } else {
+            document.body.style.backgroundImage = `url('background/${candidate.file}')`;
+          }
+          modal.style.display = 'none';
+          // 選択内容をlocalStorageに保存
+          localStorage.setItem('selectedBackground', candidate.file);
+        });
+        bgOptionsDiv.appendChild(element);
+      });
+    });
+
+    // モーダルを閉じる
+    closeModal.addEventListener('click', () => {
+      modal.style.display = 'none';
+    });
+    // モーダル外をクリックした場合も閉じる
+    window.addEventListener('click', (event) => {
+      if (event.target == modal) {
+        modal.style.display = 'none';
+      }
+    });
+    // ページ読み込み時に以前選択した背景があれば設定を反映
+    window.addEventListener('load', () => {
+      const selectedBg = localStorage.getItem('selectedBackground');
+      if (selectedBg) {
+        if(selectedBg === "none"){
+          document.body.style.backgroundImage = "none";
+        } else {
+          document.body.style.backgroundImage = `url('background/${selectedBg}')`;
+        }
+      }
     });
   </script>
 </body>
