--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       right: 20px;
       background-color: rgba(0,0,0,0.6);
       border: none;
-      width: 50px;
-      height: 50px;
+      width: 150px;   /* 50pxの3倍 */
+      height: 150px;  /* 50pxの3倍 */
       cursor: pointer;
       z-index: 1000;
     }
@@ -270,13 +270,11 @@
     const closeModal = document.getElementById('close-modal');
     const bgOptionsDiv = document.getElementById('bg-options');
 
-    // 背景候補の配列
-    // label：表示用テキスト／画像のalt、file：ファイル名。fileが"none"の場合は背景解除
+    // 背景候補の配列（背景2までに変更）
     const backgroundCandidates = [
       { label: "なし", file: "none" },
       { label: "背景1", file: "bg1.jpg" },
-      { label: "背景2", file: "bg2.jpg" },
-      { label: "背景3", file: "bg3.jpg" }
+      { label: "背景2", file: "bg2.jpg" }
     ];
 
     settingsButton.addEventListener('click', () => {
@@ -333,7 +331,7 @@
           document.body.style.backgroundImage = `url('background/${selectedBg}')`;
         }
       } else {
-        // 選択が無い場合、バックグラウンドフォルダ内のデフォルト背景を設定
+        // 選択が無い場合、バックグラウンドフォルダ内のデフォルト背景（背景1）を設定
         document.body.style.backgroundImage = `url('background/bg1.jpg')`;
         localStorage.setItem('selectedBackground', 'bg1.jpg');
       }
