--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
-      /* 初期状態は localStorage または後から設定した背景画像が適用される */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -85,27 +84,24 @@
     button:hover {
       background-color: #1f877b;
     }
-
-    /* 設定ボタン（カスタム歯車アイコン：直下のSetup.pngを使用）のスタイル */
+    /* 設定ボタンのスタイル：背景色を半透明の明るいグレーに変更 */
     .settings-button {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: rgba(0,0,0,0.6);
+      background-color: rgba(211,211,211,0.6);
       border: none;
-      width: 75px;   /* 50pxの3倍 */
-      height: 75px;  /* 50pxの3倍 */
+      width: 75px;
+      height: 75px;
       cursor: pointer;
       z-index: 1000;
     }
-    /* 設定アイコン画像が押し潰されず、正方形に収まるように */
     .settings-button img {
       width: 100%;
       height: 100%;
       object-fit: contain;
       border-radius: 50%;
     }
-
     /* モーダルウィンドウのスタイル */
     .modal {
       display: none; 
@@ -140,7 +136,7 @@
       text-decoration: none;
       cursor: pointer;
     }
-    /* 背景候補画像および「なし」オプションのスタイル */
+    /* 背景候補画像および「なし」「端末から挿入」オプションのスタイル */
     .bg-option {
       width: 30%;
       margin: 1%;
@@ -270,11 +266,14 @@
     const closeModal = document.getElementById('close-modal');
     const bgOptionsDiv = document.getElementById('bg-options');
 
-    // 背景候補の配列（背景2までに変更）
+    // 背景候補の配列を変更：
+    // 1. 「なし」
+    // 2. 「端末から挿入」
+    // 3. 従来の背景1（元々背景2だったファイル：bg1.jpg）
     const backgroundCandidates = [
       { label: "なし", file: "none" },
-      { label: "背景1", file: "bg1.jpg" },
-      { label: "背景2", file: "bg2.jpg" }
+      { label: "端末から挿入", file: "upload" },
+      { label: "背景1", file: "bg1.jpg" }
     ];
 
     settingsButton.addEventListener('click', () => {
@@ -285,8 +284,8 @@
       // 候補を並べる
       backgroundCandidates.forEach(candidate => {
         let element;
-        if(candidate.file === "none"){
-          // 「なし」オプションの場合はテキスト表示用のdiv要素を生成
+        if (candidate.file === "none" || candidate.file === "upload") {
+          // 「なし」と同じ形で表示
           element = document.createElement('div');
           element.textContent = candidate.label;
           element.className = 'bg-option none-option';
@@ -298,14 +297,33 @@
         }
         // 候補クリックで背景変更＆モーダル閉じる
         element.addEventListener('click', () => {
-          if(candidate.file === "none"){
+          if (candidate.file === "none") {
             document.body.style.backgroundImage = "none";
+            modal.style.display = 'none';
+          } else if (candidate.file === "upload") {
+            // 端末から画像挿入用のファイル選択ダイアログを生成
+            const fileInput = document.createElement('input');
+            fileInput.type = 'file';
+            fileInput.accept = 'image/*';
+            fileInput.style.display = 'none';
+            document.body.appendChild(fileInput);
+            fileInput.addEventListener('change', function() {
+              const file = fileInput.files[0];
+              if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                  document.body.style.backgroundImage = `url(${e.target.result})`;
+                };
+                reader.readAsDataURL(file);
+              }
+              document.body.removeChild(fileInput);
+            });
+            fileInput.click();
+            modal.style.display = 'none';
           } else {
             document.body.style.backgroundImage = `url('background/${candidate.file}')`;
+            modal.style.display = 'none';
           }
-          modal.style.display = 'none';
-          // 選択内容をlocalStorageに保存
-          localStorage.setItem('selectedBackground', candidate.file);
         });
         bgOptionsDiv.appendChild(element);
       });
@@ -321,20 +339,9 @@
         modal.style.display = 'none';
       }
     });
-    // ページ読み込み時に背景を反映
+    // ページ読み込み時は背景を「なし」に設定（localStorage を使用しない）
     window.addEventListener('load', () => {
-      const selectedBg = localStorage.getItem('selectedBackground');
-      if (selectedBg) {
-        if(selectedBg === "none"){
-          document.body.style.backgroundImage = "none";
-        } else {
-          document.body.style.backgroundImage = `url('background/${selectedBg}')`;
-        }
-      } else {
-        // 選択が無い場合、バックグラウンドフォルダ内のデフォルト背景（背景1）を設定
-        document.body.style.backgroundImage = `url('background/bg1.jpg')`;
-        localStorage.setItem('selectedBackground', 'bg1.jpg');
-      }
+      document.body.style.backgroundImage = "none";
     });
   </script>
 </body>
